# odys

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  justfile  mkdocs.yml  odys-architecture.excalidraw  pyproject.toml  renovate.json  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup_just_and_uv/: action.yml
.github/workflows/: main.yml  publish.yml
docs/: architecture.md  generate_example_plots.py  index.md
docs/api/: energy_system.md  index.md  math_model.md  odys.md  optimization.md  solvers.md
docs/api/domain/: exceptions.md  index.md  objective.md  scenarios.md  validation.md
docs/api/domain/entities/: base.md  fixed_load.md  flexible_load.md  generator.md  index.md  load.md  market.md  portfolio.md  storage.md
docs/api/optimization/: index.md
docs/api/optimization/constraints/: constraints_group.md  cvar_constraints.md  flexible_load_constraints.md  generator_constraints.md  index.md  market_constraints.md  model_constraint.md  scenario_constraints.md  storage_constraints.md
docs/api/optimization/model/: index.md  linopy_converter.md  milp_model.md  model_builder.md  objectives.md  registry.md  sets.md  variables.md
docs/api/optimization/parameters/: flexible_load_parameters.md  generator_parameters.md  index.md  load_parameters.md  market_parameters.md  parameters.md  (+2 more)
docs/api/results/: dispatch.md  index.md  optimization_results.md
docs/api/solvers/: config_translators.md  index.md  solver.md  solver_config.md
docs/api/utils/: index.md  logging.md
docs/assets/examples/: basic_dispatch.html  basic_dispatch.json  battery_dispatch.html  battery_dispatch.json  cvar_market_risk.html  cvar_market_risk.json  flexible_load_market.html  market_arbitrage.html  market_arbitrage.json
docs/assets/stylesheets/: extra.css
docs/examples/: basic_dispatch.md  battery_dispatch.md  cvar_market_risk.md  flexible_load_market.md  index.md  market_arbitrage.md  markets_stochastic.md  stochastic.md
docs/user_guide/: asset_portfolio.md  energy_system.md  generator.md  load.md  market.md  mathematical_notation.md  multi_stage.md  optimization.md  scenario.md  stochastic.md  stochastic_scenario.md  storage.md
examples/: basic_dispatch.py  battery_dispatch.py  cvar_market_risk.py  example_1_basic_dispatch.py  example_2_leverage_battery.py  example_3_market.py  example_cvar.py  example_multi_stage_dispatch.py  flexible_load_market.py  market_arbitrage.py
src/odys/: __init__.py  energy_system.py
src/odys/domain/: __init__.py  objective.py  scenarios.py  validation.py
src/odys/energy_system_models/: validated_energy_system.py
src/odys/math_model/: model_builder.py  parameters_builder.py
src/odys/optimization/: __init__.py
src/odys/results/: __init__.py  dispatch.py  objective.py  optimization_results.py  result_containers.py  solved_model_data.py
src/odys/solvers/: config_translators.py  solver.py  solver_config.py
tests/integration/: test_energy_system_optimization.py  test_flexible_load_optimization.py  test_scenario_optimization.py
tests/unit/test_domain/: test_exceptions.py  test_objective.py  test_scenarios.py  test_validated_energy_system.py  test_validation.py
tests/unit/test_math_model/: test_model_builder.py
tests/unit/test_results/: test_dispatch.py  test_optimization_results.py
tests/unit/test_solvers/: test_option_translators.py  test_solver.py  test_solver_config.py
(+53 files in other folders)
