[project]
name = "odys"
version = "0.2.0"
description = "Python framework for optimizing multi-energy systems."
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [{ name = "Ramiro Criach", email = "ramirocriach@gmail.com" }]
keywords = [
  "battery",
  "dispatch",
  "energy",
  "milp",
  "optimization",
  "portfolio",
  "stochastic",
  "uncertainty",
]

license = "MIT"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "highspy>=1.14.0",
  "linopy>=0.7.0",
  "numpy>=2.4.1",
  "pandas>=2.3.3",
  "pydantic>=2.12.5",
  "xarray>=2025.12.0",
]

[project.urls]
Changelog = "https://github.com/ramirocrc/odys/blob/main/CHANGELOG.md"
Documentation = "https://ramirocrc.github.io/odys/"
Homepage = "https://ramirocrc.github.io/odys/"
Issues = "https://github.com/ramirocrc/odys/issues"
Repository = "https://github.com/ramirocrc/odys"

[project.optional-dependencies]
cplex = ["cplex>=22.1.2.1"]
gurobi = ["gurobipy>=13.0.1"]
scip = ["pyscipopt>=6.1.0"]

[dependency-groups]
dev = [
  "basedpyright>=1.39.9",
  "deptry>=0.25.1",
  "nox>=2026.7.11",
  "prek>=0.4.10",
  "pyrefly>=1.1.1",
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "pytest-xdist>=3.8.0",
  "radon>=6.0.1",
  "rich>=15.0.0",
  "ruff>=0.15.22",
  "ty>=0.0.61",
  "vulture>=2.16",
  "zuban>=0.9.0",
]
docs = [
  "mkdocstrings-python>=2.0.1",
  "plotly>=6.0.0",
  "zensical>=0.0.45",
]
vulnerability-fixes = []

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[tool.basedpyright]
include = ["src/"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.coverage.report]
skip_empty = true
fail_under = 90

[tool.coverage.run]
branch = true
source = ["src"]

[tool.deptry.per_rule_ignores]
DEP002 = ["highspy", "cplex", "gurobipy", "pyscipopt"]
DEP004 = ["rich"]

[tool.pyrefly]
infer-with-first-use = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "TD",
  "FIX",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "INP001",  # Checks for packages that are missing an __init__.py
  "S101",  # Use of 'assert' detected
  "D",  # Check for missing docstrings
  "F811",  # Redefinition of unsuded variables
]
"__init__.py" = [
  "F401",
]
"examples/**" = [
  "INP001",  # Checks for packages that are missing an __init__.py
  "S101",  # Use of 'assert' detected
  "D",  # Check for missing docstrings
  "F811",  # Redefinition of unsuded variables
]
"docs/generate_example_plots.py" = [
  "INP001",  # No __init__.py in docs/
  "E402",  # sys.path manipulation before imports
  "C408",  # plotly API uses dict() extensively
  "T201",  # print() for CLI output is intentional
]
"src/odys/results/dispatch.py" = [
  "TC002",  # pandas used at runtime for type-checking
  "TC003",  # Iterator used in runtime for type hints
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true

[tool.uv.build-backend]
module-name = "odys"

[tool.vulture]
min_confidence = 80
paths = ["src/"]

[tool.zuban]
strict = true
